[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Leto Text Sans Defect.otf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/characterCreator.gd" type="Script" id=2]
[ext_resource path="res://character.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/lineEditFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/character png/color square.png" type="Texture" id=5]
[ext_resource path="res://UI/colorChanger.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/9patch.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 64, 64 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Theme" id=5]
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 4 )
OptionButton/styles/normal = SubResource( 4 )
OptionButton/styles/pressed = SubResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.411765, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 6
size_flags_vertical = 2
custom_colors/font_color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "Создание персонажа"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 488.0
margin_top = 88.0
margin_right = 823.0
margin_bottom = 136.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "обычные"
items = [ "обычные", null, false, 0, null, "необычные", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character" parent="." instance=ExtResource( 3 )]
position = Vector2( 186, 267 )
scale = Vector2( 10, 10 )

[node name="nameEdit" type="LineEdit" parent="."]
margin_left = 352.0
margin_top = 32.0
margin_right = 672.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 7 )
placeholder_text = "введите имя"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colorChanger" type="Button" parent="."]
visible = false
margin_left = 509.0
margin_top = 193.0
margin_right = 585.0
margin_bottom = 235.0
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="PanelContainer" parent="colorChanger"]
margin_left = 25.0
margin_top = 44.0
margin_right = 266.0
margin_bottom = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="colorChanger/panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 105.0

[node name="PanelContainer2" type="PanelContainer" parent="colorChanger/panel/VBoxContainer"]
margin_right = 227.0
margin_bottom = 30.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="colorChanger/panel/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 220.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="colorChanger/panel/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_top = 1.0
margin_right = 25.0
margin_bottom = 15.0
text = "RED"

[node name="R" type="HSlider" parent="colorChanger/panel/VBoxContainer/PanelContainer2/HBoxContainer"]
margin_left = 29.0
margin_right = 213.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.3
max_value = 1.0
step = 0.1
value = 0.4

[node name="PanelContainer" type="PanelContainer" parent="colorChanger/panel/VBoxContainer"]
margin_top = 34.0
margin_right = 227.0
margin_bottom = 64.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="colorChanger/panel/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 220.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="colorChanger/panel/VBoxContainer/PanelContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "GREEN"

[node name="G" type="HSlider" parent="colorChanger/panel/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 213.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.3
max_value = 1.0
step = 0.1
value = 0.4

[node name="PanelContainer3" type="PanelContainer" parent="colorChanger/panel/VBoxContainer"]
margin_top = 68.0
margin_right = 227.0
margin_bottom = 98.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="colorChanger/panel/VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 220.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="colorChanger/panel/VBoxContainer/PanelContainer3/HBoxContainer"]
margin_top = 1.0
margin_right = 33.0
margin_bottom = 15.0
text = "BLUE"

[node name="B" type="HSlider" parent="colorChanger/panel/VBoxContainer/PanelContainer3/HBoxContainer"]
margin_left = 37.0
margin_right = 213.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.3
max_value = 1.0
step = 0.1
value = 0.4

[node name="hair" parent="." instance=ExtResource( 6 )]
margin_left = 504.0
margin_top = 160.0
margin_right = 560.0
margin_bottom = 208.0

[node name="eyes" parent="." instance=ExtResource( 6 )]
margin_left = 504.0
margin_top = 216.0
margin_right = 560.0
margin_bottom = 264.0

[node name="shirt" parent="." instance=ExtResource( 6 )]
margin_left = 504.0
margin_top = 272.0
margin_right = 560.0
margin_bottom = 320.0

[node name="shorts" parent="." instance=ExtResource( 6 )]
margin_left = 504.0
margin_top = 328.0
margin_right = 560.0
margin_bottom = 376.0

[node name="body" parent="." instance=ExtResource( 6 )]
margin_left = 504.0
margin_top = 384.0
margin_right = 560.0
margin_bottom = 432.0

[node name="saveButton" type="Button" parent="."]
margin_left = 352.0
margin_top = 88.0
margin_right = 472.0
margin_bottom = 136.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="nameEdit" to="." method="_on_nameEdit_text_changed"]
[connection signal="color_changed" from="hair" to="." method="_on_hair_color_changed"]
[connection signal="color_changed" from="eyes" to="." method="_on_eyes_color_changed"]
[connection signal="color_changed" from="shirt" to="." method="_on_shirt_color_changed"]
[connection signal="color_changed" from="shorts" to="." method="_on_shorts_color_changed"]
[connection signal="color_changed" from="body" to="." method="_on_body_color_changed"]
[connection signal="pressed" from="saveButton" to="." method="_on_saveButton_pressed"]
